[package]
name = "multiplexer"
authors = ["Orual <orual.nbc@proton.me>"]
description = "Async abstraction for GPIO expanders"
repository = "https://github.com/orual/multiplexer"
readme = "README.md"
keywords = ["i2c", "gpio-expander", "gpio", "pca", "pcf", "mcp", "async"]
categories = ["embedded", "no-std", "hardware-support", "asynchronous"]
license = "MIT OR Apache-2.0"

version = "0.1.0"

edition = "2021"

[features]
default = ["portable_atomic"]
std = []
portable_atomic = ["dep:critical-section", "heapless/portable-atomic", "heapless/portable-atomic-critical-section"]

[dependencies]
critical-section = { version = "1.1.2", optional = true}
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.6" }
heapless = { version = "0.8", git = "https://github.com/rust-embedded/heapless", default-features = false }

[dev-dependencies]
embedded-hal-mock = "0.11"
