[package]
name = "multiplexer"
authors = ["Orual <orual.nbc@proton.me>"]
description = "Async abstraction for GPIO expanders"
repository = "https://github.com/orual/multiplexer"
readme = "README.md"
keywords = ["i2c", "gpio-expander", "gpio", "pca", "pcf", "mcp", "async"]
categories = ["embedded", "no-std", "hardware-support", "asynchronous"]
license = "MIT OR Apache-2.0"
# temporary until those implementations are refactored
exclude = [
    "src/dev/pca9555.rs",
    "src/dev/pcf8574.rs",
    "src/dev/pcf8575.rs",
    "src/dev/pca9536.rs",
    "src/dev/pcal6416a.rs",
    "src/dev/pcal6408a.rs",
    "src/dev/tca6408a.rs",
    "src/dev/pi4ioe5v6408.rs",
    "src/dev/pca9538.rs",
]

version = "0.1.0"

edition = "2021"

[[bin]]
name = "multiplexer"
path = "bintest/main.rs"


[features]
default = ["portable_atomic"]
std = []
portable_atomic = [
    "dep:critical-section",
    "heapless/portable-atomic",
    "heapless/portable-atomic-critical-section",
]


[dependencies]
critical-section = { version = "1.1.2", optional = true }
# embedded-hal = { version = "1.0.0" }
# embedded-hal-async = { version = "1.0.0" }
# embassy-futures = { version = "0.1" }
# embassy-sync = { version = "0.6" }
# heapless = { version = "0.8", git = "https://github.com/rust-embedded/heapless", default-features = false }

# for testing
tmc5160 = { version = "*", git = "https://github.com/orual/tmc5160", branch = "async" }
# required for the register configs to_u32_le() function
modular-bitfield = "0.11.2"
modular-bitfield-to-value = { git = "https://github.com/hacknus/modular-bitfield-to-value" }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
anyhow = { version = "1.0", default-features = false }
minicbor = { version = "0.24", default-features = false, features = [
    "derive",
    "alloc",
] }
heapless = { version = "0.8", git = "https://github.com/rust-embedded/heapless", default-features = false, features = [
    "portable-atomic",
    "portable-atomic-critical-section",
] }
rclite = { version = "0.2", git = "https://github.com/orual/rclite", branch = "portable_atomic", default-features = false, features = [
    "extra-platforms",
] }
sequential-storage = { version = "3.0", features = ["defmt-03", "arrayvec"] }


fixed = "1.10.0"
typenum = "1.17"
static_cell = { version = "2" }
portable-atomic = { version = "1.5", features = ["critical-section"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-alloc = { version = "0.5", git = "https://github.com/rust-embedded/embedded-alloc" }

embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-nb = { version = "1.0" }
embedded-hal-bus = { version = "0.2", features = ["async"] }
num-integer = { version = "0.1.45", default-features = false }
microfft = "0.6.0"
serde = { version = "1.0.136", default-features = false, features = ["derive"] }


cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
log = { version = "0.4" }
embassy-usb-logger = { version = "0.2.0" }

embassy-embedded-hal = { version = "0.2.0" }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-time-queue-driver = { version = "0.1.0" }
embedded-io = { version = "0.6.0", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage-async = { version = "0.4" }
embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "intrinsics",
    "rom-v2-intrinsics",
    "rom-func-cache",
] }
cyw43 = { version = "0.2.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.2.0", features = ["defmt", "overclock"] }
port-expander = "*"

[dev-dependencies]
embedded-hal-mock = "0.11"
